# co-processor-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
contract-template/script/: Deploy.s.sol
contract-template/src/: MyContract.sol
src/: main.rs  old.rs
src/commands/: create.rs  deploy.rs  devnet.rs  mod.rs  publish.rs  register.rs
src/helpers/: helpers.rs
